# python-RAG-PDF-Reader

./: .gitignore  CHANGELOG.md  CLEANUP_REPORT.md  ENHANCED_FEATURES.md  FASTAPI_DOCS.md  README.md  SETUP_GUIDE.md  cli.py  config.py  enhanced_legal_rag.py  enhanced_legal_rag_fixed.py  fastapi_app.py  pdf_analyzer.py  requirements.txt  run_app.bat  run_fastapi.bat  simple_cli.py  test_api.bat  test_api.py  ultra_simple.py
be/: README.md  pyproject.toml  run.py  test_api.py
be/app/: main.py
be/app/api/: service.py
be/app/core/anti_exploitation/: scam_detector.py
be/app/core/embeddings/: embedder.py
be/app/core/ingestion/: loader.py
be/app/core/llm/: runner.py
be/app/core/localization/: __init__.py  detector.py
be/app/core/preprocessing/: chunker.py  cleaner.py
be/app/core/rag/: citizen_orchestrator.py  orchestrator.py  prompts.py
be/app/core/retrieval/: hybrid_search.py  reranker.py  vector_store.py
be/app/core/second_opinion/: __init__.py  evaluator.py
be/app/core/voice/: __init__.py  engine.py  stt.py  tts.py
be/app/di/: container.py
be/app/domain/: act.py  judgment.py  section.py
be/app/domain/cases/: __init__.py  tracker.py
be/app/domain/citizen_protection/: emergency.py  models.py
be/app/domain/glossary/: __init__.py  data.py
be/app/domain/memory/: __init__.py  session.py
be/app/domain/rights/: __init__.py  data.py
be/app/domain/templates/: __init__.py  models.py  renderer.py
be/app/infra/: config.py  crypto.py  logging.py  storage.py
be/app/ui/: main_window.py
be/app/ui/screens/: __init__.py  case_tracker_view.py  (+3 more)
be/installer/: setup.iss
be/scripts/: build_knowledge_base.py  download_model.py  package.py
be/tests/: test_chunker.py  test_cleaner.py  test_embeddings.py  test_loader.py
(+32 files in other folders)
